Implements getMessage and adds example

--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
     "bots",
     "chat"
   ],
-  "author": "@rafaelcosman",
+  "author": "Rafael Cosman <rafaelcosman@gmail.com> (http://chatamize.com)",
   "license": "ISC"
 }
